testdata/support_bundle/yamls/namespaced/cattle-provisioning-capi-system/networking.k8s.io/v1/networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      meta.helm.sh/release-name: rancher-provisioning-capi
      meta.helm.sh/release-namespace: cattle-provisioning-capi-system
    creationTimestamp: "2025-12-30T21:48:35Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
        f:spec:
          f:egress: {}
          f:ingress: {}
          f:policyTypes: {}
      manager: helm
      operation: Update
      time: "2025-12-30T21:48:35Z"
    name: default-allow-all
    namespace: cattle-provisioning-capi-system
    resourceVersion: "2512"
    uid: 269a68a0-3c73-4446-9cc6-7daacf63fbd9
  spec:
    egress:
    - {}
    ingress:
    - {}
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: "14499"
